--- a/project website/index.html
+++ b/project website/index.html
@@ -5,23 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fire Detection</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12/lib/typed.min.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
     <header>
         <nav id="navbar">
-            <div class="left">FIRE ALERT</div>
+            <img src="" alt="Fire Alert" class="nav-logo">
             <div class="right">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#description">Description</a></li>
-                    <li><a href="metrics.html" target="_blank">Metrics</a></li>
-                    <li><a href="#todo">To Do</a></li>
-                    <li><a href="#Important_Numbers">Emergency Contact</a></li>
+                    <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#description"><i class="fas fa-info-circle"></i> Description</a></li>
+                <li><a href="metrics.html" target="_blank"><i class="fas fa-chart-bar"></i> Metrics</a></li>
+                <li><a href="#todo"><i class="fas fa-tasks"></i> To Do</a></li>
+                <li><a href="#Important_Numbers"><i class="fas fa-phone"></i> Emergency Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -82,7 +84,7 @@
         <section id="todo" class="tile-section">
             <div class="tile">
                 <div class="tile-content">
-                    <h1 class="gradient-heading" data-text="To Do (Help)">To Do (Help)</h1>
+                    <h1 class="gradient-heading" data-text="To Do">To Do</h1>
                     <ul class="section-text">
                         <li>Develop and optimize the fire detection algorithm for different environments.</li>
                         <li>Integrate live alerts using SMS, emails, and push notifications for faster communication.</li>
