--- a/project website/index.html
+++ b/project website/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <div id="navi-bar">
         <nav id="navbar">
             <img src="" alt="Fire Alert" class="nav-logo">
             <div class="right">
@@ -23,11 +23,11 @@
                 <li><a href="#description"><i class="fas fa-info-circle"></i> Description</a></li>
                 <li><a href="metrics.html" target="_blank"><i class="fas fa-chart-bar"></i> Metrics</a></li>
                 <li><a href="#todo"><i class="fas fa-tasks"></i> To Do</a></li>
-                <li><a href="#Important_Numbers"><i class="fas fa-phone"></i> Emergency Contact</a></li>
+                <li><a href="#Emergency-Contact"><i class="fas fa-phone"></i> Emergency Contact</a></li>
                 </ul>
             </div>
         </nav>
-    </header>
+    </div>
 
     <main>
         <!-- First Section -->
@@ -99,10 +99,10 @@
         <hr>
 
         <!-- Emergency Numbers Section -->
-        <section id="Important_Numbers"class="tile-section">
+        <section id="Emergency-Contact"class="tile-section">
             <div class="tile">
                 <div class="tile-content">
-                    <h1 class="gradient-heading" data-text="Important Numbers">Important Numbers</h1>
+                    <h1 class="gradient-heading" data-text="Emergency Contact">Emergency Contact</h1>
                     <div class="table-container">
                         <table class="styled-table colorful-table" width="1000px" border="1px">
                             <thead>
